Utvidet/forbedret mail-taggen støtter nå caching og attributtene "max" og "fields". Forbedret debug-logging.
git-svn-id: https://subversion.kantega.no/svn/aksess/projects/aksess-modules/trunk@10279 497bca9e-fae7-0310-9681-f2327195b1a6